[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/sprites/enemy_hound.png" type="Texture" id=1]
[ext_resource path="res://objects/enemies/CursedHound.gd" type="Script" id=2]

[sub_resource type="AnimationNodeAnimation" id=1]
animation = "dead"

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "pos_fall"

[sub_resource type="AnimationNodeAnimation" id=6]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]

[sub_resource type="AnimationNodeStateMachineTransition" id=8]

[sub_resource type="AnimationNodeStateMachineTransition" id=9]

[sub_resource type="AnimationNodeStateMachineTransition" id=10]

[sub_resource type="AnimationNodeStateMachineTransition" id=11]

[sub_resource type="AnimationNodeStateMachineTransition" id=12]

[sub_resource type="AnimationNodeStateMachineTransition" id=13]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=14]
states/dead/node = SubResource( 1 )
states/dead/position = Vector2( 323, 248.333 )
states/fall/node = SubResource( 2 )
states/fall/position = Vector2( 809.667, 196.333 )
states/idle/node = SubResource( 3 )
states/idle/position = Vector2( 567, 136.333 )
states/jump/node = SubResource( 4 )
states/jump/position = Vector2( 755, 80.3333 )
states/pos_fall/node = SubResource( 5 )
states/pos_fall/position = Vector2( 640.333, 247.444 )
states/run/node = SubResource( 6 )
states/run/position = Vector2( 345.667, 94.1111 )
transitions = [ "idle", "jump", SubResource( 7 ), "idle", "run", SubResource( 8 ), "run", "idle", SubResource( 9 ), "jump", "fall", SubResource( 10 ), "idle", "dead", SubResource( 11 ), "fall", "pos_fall", SubResource( 12 ), "pos_fall", "idle", SubResource( 13 ) ]
start_node = "idle"
end_node = "dead"

[sub_resource type="AnimationNodeStateMachinePlayback" id=15]

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 18, 19, 20, 21, 22, 23 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=17]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 13, 14 ]
}

[sub_resource type="Animation" id=18]
length = 6.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.6, 0.7, 0.8, 1.5, 1.6, 1.7, 2.6, 2.7, 2.8, 3.4, 3.5, 3.6, 3.9, 4.1, 4.7, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 3, 4, 5, 3, 4, 5, 2, 1, 0, 1, 2, 1, 2 ]
}

[sub_resource type="Animation" id=19]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 10, 12 ]
}

[sub_resource type="Animation" id=20]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 15, 16 ]
}

[sub_resource type="Animation" id=21]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10 ]
}

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 14.4323, 8.78378 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 32.003, 3.25332 )

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 80, 109 )

[node name="CursedHound" type="KinematicBody2D" groups=[
"enemies",
]]
collision_layer = 4
collision_mask = 25
script = ExtResource( 2 )
__meta__ = {
"_editor_description_": "colocar cuerpo pegado al suelo al editar nivel"
}

[node name="TimerChangeFacing" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="TimerHurt" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
__meta__ = {
"_editor_description_": "activado al ser herido, mientras esté activo no podrá ser herido"
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 14 )
anim_player = NodePath("../AnimationPlayer")
active = true
process_mode = 0
parameters/playback = SubResource( 15 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dead = SubResource( 16 )
anims/fall = SubResource( 17 )
anims/idle = SubResource( 18 )
anims/jump = SubResource( 19 )
anims/pos_fall = SubResource( 20 )
anims/run = SubResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8.823 )
shape = SubResource( 22 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.003, -26.012 )
texture = ExtResource( 1 )
hframes = 24

[node name="RayCastDetectNoFloor" type="RayCast2D" parent="Sprite"]
position = Vector2( -23.997, 26.012 )
enabled = true
cast_to = Vector2( 0, 20 )
collision_mask = 8

[node name="RayCastDetectFrontWall" type="RayCast2D" parent="Sprite"]
modulate = Color( 0.313726, 0, 1, 1 )
position = Vector2( -14.53, 12.012 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 8

[node name="AreaDetectPlayerNearOnFloor" type="Area2D" parent="Sprite"]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/AreaDetectPlayerNearOnFloor"]
position = Vector2( -48, 23 )
shape = SubResource( 23 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Sprite/AreaDetectPlayerNearOnFloor"]
position = Vector2( 48, 23 )
shape = SubResource( 23 )

[node name="AreaDetectPlayer" type="Area2D" parent="."]
collision_layer = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaDetectPlayer"]
modulate = Color( 0.0745098, 0.713726, 0.054902, 1 )
position = Vector2( 0, 38 )
shape = SubResource( 24 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
modulate = Color( 1, 1, 1, 0.443137 )
position = Vector2( 3.8147e-06, -8 )
scale = Vector2( 13.3812, 3.725 )
process_parent = true
physics_process_parent = true

[connection signal="timeout" from="TimerChangeFacing" to="." method="_on_TimerChangeFacing_timeout"]
[connection signal="body_entered" from="Sprite/AreaDetectPlayerNearOnFloor" to="." method="_on_AreaDetectPlayerNearOnFloor_body_entered"]
[connection signal="body_exited" from="Sprite/AreaDetectPlayerNearOnFloor" to="." method="_on_AreaDetectPlayerNearOnFloor_body_exited"]
[connection signal="body_entered" from="AreaDetectPlayer" to="." method="_on_AreaDetectPlayer_body_entered"]
[connection signal="body_exited" from="AreaDetectPlayer" to="." method="_on_AreaDetectPlayer_body_exited"]
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
